--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "be-template",
+  "name": "naru",
   "version": "1.0.0",
   "description": "Template repository for the Backend development",
   "main": "./src/index.js",
   "scripts": {
-    "test": "jest --no-cache",
     "start": "node ."
   },
   "author": "junchan-deriv",
   "license": "ISC",
-  "devDependencies": {
-    "jest": "^29.2.2",
-    "supertest": "^6.3.1"
-  },
   "dependencies": {
     "express": "^4.18.2"
   }
